--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,26 @@
-PyYAML
-moviepy
-Pillow
+aiohttp==3.8.5
+aiosignal==1.3.1
+altgraph==0.17.3
+async-timeout==4.0.3
+attrs==23.1.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+decorator==4.4.2
+edge-tts==6.1.8
+frozenlist==1.4.0
+idna==3.4
+imageio==2.31.2
+imageio-ffmpeg==0.4.8
+macholib==1.16.2
+moviepy==1.0.3
+multidict==6.0.4
+numpy==1.25.2
+Pillow==9.5.0
+proglog==0.1.10
+pyinstaller==5.13.2
+pyinstaller-hooks-contrib==2023.8
+PyYAML==6.0.1
+requests==2.31.0
+tqdm==4.66.1
+urllib3==2.0.4
+yarl==1.9.2
